<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (c) 2021 NetEase, Inc.  All rights reserved.
  ~  Use of this source code is governed by a MIT license that can be found in the LICENSE file
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.main.SettingIMFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dp_88"
            android:layout_marginBottom="@dimen/common_dp_10"
            android:background="@color/white"
            android:gravity="center"
            android:paddingTop="@dimen/common_dp_44"
            android:text="@string/im_login"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/ts_17_dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/tv_back"
            android:layout_width="@dimen/common_dp_44"
            android:layout_height="@dimen/common_dp_44"
            android:layout_marginStart="@dimen/common_dp_4"
            android:layout_marginTop="@dimen/common_dp_44"
            android:gravity="center_vertical"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/firstEditor"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_margin="10dp"
            android:hint="@string/im_account"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <EditText
            android:id="@+id/secondEditor"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_margin="10dp"
            android:hint="@string/im_password"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstEditor"
            tools:text="1234567" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/toggleIMReuse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/im_reuse_status_take_effect_after_restart"
            android:textOff="@string/disabled"
            android:textOn="@string/enabled"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/secondEditor" />

        <TextView
            android:id="@+id/imLoginState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/current_im_account"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toggleIMReuse" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/login"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imLoginState" />

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/logout"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>