<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021 NetEase, Inc.  All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be found in the LICENSE file.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_f2f3f5"
        tools:context=".ui.main.SettingFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dp_88"
            android:layout_marginBottom="@dimen/common_dp_10"
            android:background="@color/white"
            android:gravity="center"
            android:paddingTop="@dimen/common_dp_44"
            android:text="@string/setting"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/ts_17_dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/tv_back"
            android:layout_width="@dimen/common_dp_44"
            android:layout_height="@dimen/common_dp_44"
            android:layout_marginStart="@dimen/common_dp_4"
            android:layout_marginTop="@dimen/common_dp_44"
            android:gravity="center_vertical"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_chatroom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dp_56"
            android:layout_marginTop="@dimen/common_dp_20"
            android:background="@color/white"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/common_dp_20"
            android:text="@string/open_chat_room"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/ts_17_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/toggle_chatroom"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/common_dp_31"
            android:layout_marginEnd="@dimen/common_dp_20"
            android:gravity="center"
            android:thumb="@drawable/switch_thumb"
            app:layout_constraintBottom_toBottomOf="@id/tv_chatroom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_chatroom"
            app:switchMinWidth="@dimen/common_dp_51"
            app:track="@drawable/switch_track" />

        <TextView
            android:id="@+id/tv_chatroom_desc"
            android:paddingStart="@dimen/common_dp_20"
            android:paddingEnd="@dimen/common_dp_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_dp_5"
            android:ellipsize="marquee"
            android:text="@string/open_chatroom"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/ts_14_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_chatroom"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tv_im_reuse"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dp_56"
            android:layout_marginTop="@dimen/common_dp_45"
            android:background="@color/white"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/common_dp_20"
            android:text="@string/im_reuse"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/ts_17_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_chatroom" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_im_reuse"
            android:layout_width="@dimen/common_dp_31"
            android:layout_height="@dimen/common_dp_56"
            android:layout_marginEnd="@dimen/common_dp_20"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@id/tv_im_reuse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_im_reuse"
            app:srcCompat="@mipmap/goto_detail"/>

        <TextView
            android:id="@+id/tv_im_reuse_desc"
            android:paddingStart="@dimen/common_dp_20"
            android:paddingEnd="@dimen/common_dp_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_dp_5"
            android:ellipsize="marquee"
            android:text="@string/im_resue_desc"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/ts_14_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_im_reuse"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tv_low_latency_live"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dp_56"
            android:layout_marginTop="@dimen/common_dp_45"
            android:background="@color/white"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/common_dp_20"
            android:text="@string/low_latency_live"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/ts_17_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_im_reuse" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/toggle_low_latency_live"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/common_dp_31"
            android:layout_marginEnd="@dimen/common_dp_20"
            android:gravity="center"
            android:thumb="@drawable/switch_thumb"
            app:layout_constraintBottom_toBottomOf="@id/tv_low_latency_live"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_low_latency_live"
            app:switchMinWidth="@dimen/common_dp_51"
            app:track="@drawable/switch_track" />

        <TextView
            android:id="@+id/tv_low_latency_live_desc"
            android:paddingStart="@dimen/common_dp_20"
            android:paddingEnd="@dimen/common_dp_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_dp_5"
            android:ellipsize="marquee"
            android:text="@string/low_latency_live_desc"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/ts_14_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_low_latency_live"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tv_teacher_live"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dp_56"
            android:layout_marginTop="@dimen/common_dp_45"
            android:background="@color/white"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/common_dp_20"
            android:text="@string/teacher_live"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/ts_17_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_low_latency_live" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/toggle_teacher_live"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/common_dp_31"
            android:layout_marginEnd="@dimen/common_dp_20"
            android:gravity="center"
            android:thumb="@drawable/switch_thumb"
            app:layout_constraintBottom_toBottomOf="@id/tv_teacher_live"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_teacher_live"
            app:switchMinWidth="@dimen/common_dp_51"
            app:track="@drawable/switch_track" />

        <TextView
            android:id="@+id/tv_teacher_live_desc"
            android:paddingStart="@dimen/common_dp_20"
            android:paddingEnd="@dimen/common_dp_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_dp_5"
            android:ellipsize="marquee"
            android:text="@string/teacher_live_desc"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/ts_14_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_teacher_live"
            android:singleLine="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>